import java.time.LocalDateTime;

public class Hospital {
    public void showFreeTimeSlot(Doctor doctor, String date) {
    }

    public void displayTreatments() {
    }

    public void addDoctor(Doctor doctor) {
    }

    public void addPatient(Patient patient) {
    }

    public void displayDoctors() {
    }

    public Patient getPatient(String patientSearch) {
    return null; }

    public Doctor getDoctor(String doctorSearch) {
        return null;
    }

    public Appointment addAppointment(Patient patient, Doctor doctor, String date, String time) {
        return null;
    }

    public void displayPatients() {
    }

    public void displayUpcomingAppointments(LocalDateTime now) {
    }

    public Patient getPatient(int i) {
        return null;
    }

    public Doctor getDoctor(int i) {
   return null;
    }

    public Treatment getTreatment(int treatId) {
    return null; }

    public void addTreatment(Treatment treatment) {
    }

    public Treatment geTreatment(String treatmentIdOrName) {
        return null;

    }

    public Treatment geTreatment(Integer treatmentIdOrName) {
        return null;

    }

    public Appointment getAppointment(int appointmrntId) {
    return null;}

    public void showBillingInfo(String date) {
    }

    public void displayUpcomingAppointments() {
    }
}
